# finnie

./: .gitattributes  .gitignore  .mcp.json  README.md  TECHNICAL_DESIGN.md  config.yaml  main.py  presentation.html  pyproject.toml  requirements.txt
data/faiss_index/: index.faiss  index.pkl
src/agents/: goal_agent.py  market_agent.py  news_agent.py  portfolio_agent.py  qa_agent.py  tax_agent.py
src/core/: llm.py
src/mcp_server/: server.py
src/rag/: loader.py  retriever.py
src/utils/: logger.py  market_tools.py
src/web_app/: app.py
src/workflow/: graph.py  prompts.py  router.py  state.py  tools.py
tests/: test_app.py  test_goal_agent_integration.py  test_loader_integration.py  test_market_agent_integration.py  test_news_agent_integration.py  test_portfolio_agent_integration.py  test_qa_agent_integration.py  test_tax_agent_integration.py  test_workflow.py
