[project]
name = "finnie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.5",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
[tool.pytest.ini_options]
pythonpath = ["."]
